--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ jupyter-core==4.7.1
 jupyter-server==1.3.0
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
+matplotlib==3.5.1
+matplotlib-base==3.5.1
+matplotlib-inline==0.1.2
 MarkupSafe==1.1.1
 mistune==0.8.4
 nbclient==0.5.2
@@ -30,10 +33,15 @@ nbconvert==6.0.7
 nbformat==5.1.2
 nest-asyncio==1.5.1
 notebook==6.2.0
+numpy==1.21.5
+numpy-base==1.21.5
+numpydoc==1.2
 packaging==20.9
+pandas==1.4.2
 pandocfilters==1.4.3
 parso==0.8.1
 pickleshare==0.7.5
+plotly==5.6.0
 prometheus-client==0.9.0
 prompt-toolkit==3.0.16
 pycparser==2.20
@@ -46,6 +54,7 @@ pyzmq==22.0.3
 Send2Trash==1.5.0
 six==1.15.0
 sniffio==1.2.0
+streamlit==1.10.0
 testpath==0.4.4
 tornado==6.1
 traitlets==5.0.5
